--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-10 12:46:56
+lastsearch = 2024-07-10 16:31:15
 
 [www.kymdan.com]
 match = 4.2%%
@@ -17,9 +17,9 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = -21.9%%
-title = Bộ Chăn Ga Lasante Vải Tencel - Đỏ Ruby Ga Chun ...
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-lasante-vai-tencel-do-ruby-ga-chun-180x200cm/
+match = 6.2%%
+title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
+url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
 match = 24.1%%
@@ -77,9 +77,9 @@ title = KYMDAN | Our Quality Your Comfort
 url = https://kymdan.us/en/
 
 [demxinh.vn]
-match = -40.6%%
-title = {Top 20+} Bộ chăn ga gối đệm cưới màu tím đẹp, mềm mại ...
-url = https://demxinh.vn/tin-tuc/mau-chan-ga-goi-mau-tim-cho-phong-cuoi.html
+match = -37.5%%
+title = {Top 15+} Bộ chăn ga gối đệm cưới màu vàng đẹp nhất 2023
+url = https://demxinh.vn/tin-tuc/bo-chan-ga-goi-dem-cuoi-mau-vang.html
 
 [dem24h.vn]
 match = 3.1%%
