--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-10 05:35:32
+lastsearch = 2024-07-10 16:35:14
 
 [vnexpress.net]
 match = -128.6%%
@@ -267,9 +267,9 @@ title = Kỳ quay thưởng tháng 12/2023
 url = https://techcombank.com/content/dam/techcombank/public-site/documents/articles/danh-sach-ma-quay-thuong-chuong-trinh-uu-dai-mua-dong-thang-12-2023-959d9c4cd7.pdf
 
 [www.tiktok.com]
-match = -123.8%%
-title = Vũng Tàu 3 đêm 2 đêm ăn chơi những đâu? #VietNamToiYeu ...
-url = https://www.tiktok.com/@sayhihuy/video/7227440370106371333
+match = -138.1%%
+title = Du Lịch Vũng Tàu sáng đi chiều về #daureview #ancungtiktok ...
+url = https://www.tiktok.com/@dau.rv/video/7211480207096663322
 
 [www.dideden.com]
 match = -38.1%%
