--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-10 16:16:52
+lastsearch = 2024-07-10 16:29:39
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -281.8%%
-title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
+match = -309.1%%
+title = Có bán Tủ đầu giường bằng gỗ tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/wood-nightstands/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -290.9%%
-title = Giường sắt 1m - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/giường/sắt/1m
+match = -263.6%%
+title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường/1m2
 
 [dogodelathanhhanoi.com]
 match = -245.5%%
