--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-10 15:48:53
+lastsearch = 2024-07-10 16:31:35
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -127.8%%
-title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
-url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
+match = -11.1%%
+title = Nem Nướng | Ho Chi Minh City
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
-match = 23.5%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [garan.vn]
 match = -166.7%%
