--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-10 10:50:19
+lastsearch = 2024-07-10 16:30:55
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,8 +17,8 @@ title = 김가일 | Ga Kim - Coreano 🇰🇷 Fácil e Rápido (@gakim0)
 url = https://www.instagram.com/gakim0/?hl=en
 
 [www.reddit.com]
-match = -50.0%%
-title = Riot is cutting back budget on esports?
+match = -135.0%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
@@ -37,8 +37,8 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = -157.1%%
-title = YouTube
+match = -130.0%%
+title = Season 2021 Opening Day | Full Livestream - League of ...
 url = https://www.youtube.com/watch?v=rnFRcjzhTzE
 
 [som.yale.edu]
@@ -102,9 +102,9 @@ title =
 url = https://english.moe.go.kr/sub/infoRenewal.do?m=0301&page=0301&s=english
 
 [cryptonews.com]
-match = -110.0%%
-title = Ingersoll Lockwood Announces Launch of Token, $INGER
-url = https://cryptonews.com/news/ingersoll-lockwood-announces-launch-of-token-inger.htm
+match = -135.0%%
+title = Bitcoin Miner TeraWulf Clears Debt, Plans Operational ...
+url = https://cryptonews.com/news/bitcoin-miner-terawulf-clears-debt-plans-operational-upsurge.htm
 
 [www.google.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -160.0%%
-title = (Olympics) Confusion reigns after chaotic finish in short ...
-url = https://en.yna.co.kr/view/AEN20180213013100315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
