--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-10 15:37:33
+lastsearch = 2024-07-10 16:35:25
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -187,8 +187,8 @@ title = Gastrointestinal Disease Therapeutics Working Group ...
 url = https://www.nichd.nih.gov/sites/default/files/inline-files/gastrointestinal_wg.pdf
 
 [www.mea.gov.in]
-match = 0.0%%
-title = national-archive-new.pdf
+match = -150.0%%
+title = Declassified Files of Ministry of External Affairs in National ...
 url = https://www.mea.gov.in/images/pdf/national-archive-new.pdf
 
 [oll-resources.s3.us-east-2.amazonaws.com]
