--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-10 16:28:24
+lastsearch = 2024-07-10 16:46:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -29.2%%
-title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp vuông
+match = -54.2%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -32,9 +32,9 @@ title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
 url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
-match = -4.2%%
-title = Màn đỉnh Vuông Tự Bung Giá Tốt T03/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
+match = 20.8%%
+title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [munghoangphat.com]
 match = 41.7%%
@@ -67,8 +67,8 @@ title = Pan-Asian Metropolis — Asian Angeleno Musicians
 url = https://ericbrightwell.com/2016/05/22/directory-of-asian-american-musicians-of-southern-california/
 
 [www.facebook.com]
-match = -70.8%%
-title = ️ GENTHERM - THỬ THÁCH CÓ THƯỞNG Bạn có kế hoạch gì ...
+match = -45.8%%
+title = ♥️ GENTHERM - THỬ THÁCH CÓ THƯỞNG Bạn có kế ...
 url = https://www.facebook.com/100057109373471/videos/️-gentherm-thử-thách-có-thưởngbạn-có-kế-hoạch-gì-trong-dịp-nghỉ-lễ-giỗ-tổ-hùng-v/346729105070806/
 
 [vi.wikipedia.org]
