--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-10 20:04:34
+lastsearch = 2024-07-10 20:51:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -28,8 +28,8 @@ url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
 
 [chandem.com.vn]
 match = 42.3%%
-title = Bộ chăn ga gối Litter Girl Ctt112
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
+title = Bộ chăn ga gối Happy Wedding Solid 84
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 
 [www.koala.vn]
 match = -3.8%%
