--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-10 18:20:17
+lastsearch = 2024-07-10 20:47:47
 
 [burningman.org]
 match = -60.0%%
@@ -647,8 +647,8 @@ title = T-Mobile® Official Site: Get Even More Without Paying More
 url = https://www.t-mobile.com/
 
 [www.walmart.com]
-match = -86.7%%
-title = Walmart | Save Money. Live better.
+match = -246.7%%
+title = Walmart's July Deals are here with savings up to 50 percent Off
 url = https://www.walmart.com/
 
 [www.frontlineeducation.com]
