--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-10 17:34:12
+lastsearch = 2024-07-10 20:47:27
 
 [www.walmart.com]
 match = -181.2%%
@@ -13,8 +13,8 @@ url = https://www.walmart.com/ip/Zury-Natural-Dream-Feel-Look-Ocean-Wave-18-SOM-
 
 [www.tiktok.com]
 match = -243.8%%
-title = #beautytok #fauxfiltercolorcorrector #colorcorrection @Huda ...
-url = https://www.tiktok.com/@hudabeauty/video/7349654926324419886
+title = How I like to contour my lips #hudabeauty #foryou #beautytok ...
+url = https://www.tiktok.com/@hudabeauty/video/7267624422679334187
 
 [www.diepxuan.com]
 match = -150.0%%
@@ -47,9 +47,9 @@ title = Griffin Gould Website - Blog
 url = https://www.griffingouldwebsite.com/blog
 
 [www.youtube.com]
-match = -162.5%%
-title = Emilie & Ogden with David Simard - Hot Dreams (cover)
-url = https://www.youtube.com/watch?v=CUQBFAvIlUU
+match = 0.0%%
+title = 
+url = https://www.youtube.com/watch?v=WzTTgNKqC1o
 
 [m.facebook.com]
 match = 0.0%%
