--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-10 20:34:52
+lastsearch = 2024-07-10 21:13:14
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -94.7%%
+title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -168.4%%
-title = Chiều nay em đi câu cá, con cua, nhạc thiếu nhi vui nhộn, quả ...
-url = https://www.youtube.com/watch?v=6ZKWF1hxUeE
+match = -57.9%%
+title = Xúc Xắc Xúc Xẻ - Bé Bảo An ft Phi Long
+url = https://www.youtube.com/watch?v=Fd7lYEtevxQ
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -63,8 +63,8 @@ url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-
 
 [tiki.vn]
 match = -126.3%%
-title = Đồ chơi trẻ em thông minh hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=đồ chơi trẻ em thông minh
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p253468081.html
 
 [khodem.vn]
 match = 31.6%%
