--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-10 20:03:27
+lastsearch = 2024-07-10 21:20:16
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -42,13 +42,13 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 48.6%%
-title = Nệm lò xo Everon Bonnell 160x200x23
+match = 23.4%%
+title = Everon Quảng Bình Nệm lò xo Everon Bonnell 160x200x23
 url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
 
 [www.diepxuan.com]
-match = 55.3%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27 - Điệp Xuân
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
