--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-10 20:00:33
+lastsearch = 2024-07-10 21:47:48
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -33.3%%
-title = Những Bộ Chăn Ga Gối Đệm Cao Cấp Sang Trọng Quý Phái
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
+match = -41.7%%
+title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [tiki.vn]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -62.5%%
-title = bộ chăn ga gối màu xanh lá giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối màu xanh lá&urlold=bo-chan-ga-goi-thun-1-mau-xanh-la-non/955821120876975099/877968015750663345/
+match = -75.0%%
+title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
+url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
 match = -8.3%%
