--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-10 20:48:32
+lastsearch = 2024-07-10 21:47:27
 
 [shopee.vn]
-match = -33.3%%
-title = CHIẾU ĐIỀU HOÀ MÂY LOẠI 1 ĐỦ KÍCH THƯỚC , GIÁ TẠI ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-MÂY-LOẠI-1-ĐỦ-KÍCH-THƯỚC-GIÁ-TẠI-XƯỞNG-SẢN-XUẤT--i.46360011.4028012766
+match = -54.2%%
+title = Chiếu điều hòa, sợi mây tổng hợp, loại 1 mặt sau dệt sợi tơ
+url = https://shopee.vn/Chiếu-điều-hòa-sợi-mây-tổng-hợp-loại-1-mặt-sau-dệt-sợi-tơ-i.953354676.19573140759
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 60.9%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -25.0%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 70.8%%
