--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-10 21:16:47
+lastsearch = 2024-07-10 22:20:30
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -42,9 +42,9 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -200.0%%
-title = DAILY UPLOADS DAY 1 JFJFJFJF #music #fortnite #ukulele ...
-url = https://www.youtube.com/watch?v=SfhTqo-KgkQ
+match = -141.2%%
+title = ATEEZ(KQ Fellaz) (Yunho Solo) Performance Video
+url = https://www.youtube.com/watch?v=SOqaA-Mbw88
 
 [www.tiktok.com]
 match = 20.0%%
