--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-10 19:29:24
+lastsearch = 2024-07-10 22:15:56
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Lê Mật Đài Loan Bên E Giao Khách l Đếm Không Hết Quả ...
 url = https://www.youtube.com/watch?v=jnvflW7R2LY
 
 [m.facebook.com]
-match = 28.6%%
-title = Nội thất nhựa đài loan thành phong
-url = https://m.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=pt_BR
+match = -60.7%%
+title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan ) | Lâu lắm rồi ...
+url = https://m.facebook.com/groups/langantho/permalink/1112573796132295/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -53.6%%
-title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
