--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-10 21:13:14
+lastsearch = 2024-07-10 22:20:43
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -57.9%%
-title = Xúc Xắc Xúc Xẻ - Bé Bảo An ft Phi Long
-url = https://www.youtube.com/watch?v=Fd7lYEtevxQ
+match = -110.5%%
+title = Nhạc thiếu nhi vui nhộn cho bé: Tập thể dục buổi sáng
+url = https://www.youtube.com/watch?v=VcXWebskM88
 
 [dochoihoangthu.com]
 match = -121.1%%
