--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-10 21:50:30
+lastsearch = 2024-07-10 22:22:45
 
 [screenrant.com]
 match = 0.0%%
@@ -32,8 +32,8 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
+match = -50.0%%
+title = Explore my Options | USCIS
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -182,9 +182,9 @@ title =
 url = https://www.metacritic.com/tv/blue-eye-samurai/user-reviews/
 
 [www.etsy.com]
-match = -242.9%%
-title = An Thái Wax Apple - 1 to 2 Feet Tall - Ship in 3gal Pot
-url = https://www.etsy.com/listing/1334421773/mn-an-thai-xanh-an-thai-wax-apple-1-to-2
+match = 35.7%%
+title = Ao Dai Xanh Mint
+url = https://www.etsy.com/market/ao_dai_xanh_mint
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
