--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-10 21:20:40
+lastsearch = 2024-07-10 22:16:20
 
 [www.riotgames.com]
 match = -84.0%%
@@ -27,8 +27,8 @@ title = Điệp Xuân Ruột nệm Korea 140x190x09
 url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 
 [www.ciee.org]
-match = -100.0%%
-title = My experience in being a Black woman in South Korea | CIEE
+match = 0.0%%
+title = 
 url = https://www.ciee.org/go-abroad/college-study-abroad/blog/my-experience-being-black-woman-south-korea
 
 [www.bbc.co.uk]
